# logicare

./: .gitignore  README.md  Sample_warehouse_01.dxf  build_warehouse_graph.py  debug_solution.py  generate_grid_warehouse.py  generate_warehouse.py  pyproject.toml  requirements.txt  run.py  run_simulation.py  run_tests.sh  test_grid_warehouse.py
.claude/: settings.local.json
cad_adapter/: __init__.py  layout_importer.py
data/: small_warehouse.json  test_warehouse_small.json  warehouse_blocks.json  warehouse_crossaisle.json  warehouse_grid_20x5.json  warehouse_grid_25x4.json
graph/: __init__.py  graph.py
optimizer/: __init__.py  batch.py  route_optimizer.py
output/: Sample warehouse v1.dxf
tests/: __init__.py  test_batch.py  test_graph.py
visualization/: __init__.py  route_simulation.py  route_visualizer.py
