[project]
name = "logicare"
version = "0.1.0"
description = "Warehouse Route Optimization POC using DOcplex"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pandas>=2.3.3",
    "docplex>=2.23.0",
    "matplotlib>=3.7.0",
    "networkx>=3.0",
    "numpy>=1.24.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]
